Fixes merge from branch 'jetty-9.4.x' into 'jetty-10.0.x'.